Finished Pong Tutorial

--- a/html/tutorials/install.html
+++ b/html/tutorials/install.html
@@ -21,19 +21,15 @@ $(document).ready(function () {
 
 <div class="content">
 
-<h1>Let's Remake Pong</h1>
+<h1>PAC Game Development Installation Guide</h1>
 <p>
-We're going to build a really simple game - Pong. It's the 'Hello World' of
-game development. It was also the very first arcade game ever made.
+This guide should help you get Dr Java set up for developing these games.
 </p>
 <div class="captioned">
 <img src="../imgs/original_pong.png" />
 This is what the original Pong looked like. (From <a href="http://en.wikipedia.org/wiki/Pong">Wikipedia</a>)
 </div>
-<div class="captioned">
-<img src="../imgs/pong_finished.gif" />
-What we're going to make
-</div>
+
 
 <h2>Getting Started</h2>
 <p>
